# generative-ai-using-langchain

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
01-intro-langchain/: README.md
02-componets/: README.md
02-langchain-prompts/: README.md
03-langchain-models/: README.md
03-langchain-structured-output/: README.md
06-output-parsers/: 01-str-output-parser.py  02-str-output-parser-in-chain-pipline.py  03-json-output-parsers.py  04-structured-output-parser.py  05-pydantic-output-parser.py  README.md
07-chain/: 01-simple-chain.py  02-sequential-chain.py  03-parallel-chain.py  04-conditional-chain.py  README.md
08-runnable-p1/: 01-without-runnable-life.ipynb  02-with-runnable-life.ipynb  README.md
09-runnable-p2/: 01-runnable-sequence.py  02-runnable-parallel.py  03-runnable-passthrought.py  04-runnable-lambda.py  05-runnable-branch.py  README.md
10-document-loaders/: README.md
11-text-splitters/: 01-length-based.py  02-text-structure-based.py  03-markdown-splitting.py  05-semantic-meaning.py  README.md
12-vector-store/: README.md  langchain-chroma.py  langchain-faiss.py
13-retrievers/: 01-wikipedia-retrievers.py  02-vector-store-retriever.py  03-mmr.py  04-multi-query-retriver.py  05-contextual-compression-retriever.py  README.md
14-rag-p1/: README.md
15-rag-p2/: README.md  yt-api-rag-system.py
16-tools/: 01-duck-duck-go-search.py  02-shell-toll.py  03-custom-tool.py  04-custom-tool-using-structured-tool.py  05-custom-tool-using-base-tool.py  06-toolkit.py  README.md
17-tool-calling/: README.md  tool-calling.py  (+1 more)
(+50 files in other folders)
