[project]
name = "generative-ai-using-langchain"
version = "0.1.0"
description = "All my notes for the LangChain"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "chardet<6.0.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "google-generativeai>=0.8.6",
    "grandalf>=0.8",
    "huggingface-hub[hf-xet]>=0.36.0",
    "langchain>=1.2.3",
    "langchain-anthropic>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-google-genai>=4.1.3",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "pydantic>=2.12.5",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.2",
    "torch>=2.9.1",
    "transformers>=4.57.5",
]
